force-app/main/default/objects/copado__Deployment__c/copado__Deployment__c.object-meta.xml
<CustomObject>
    <label>Deployment</label>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>