force-app/main/default/objects/copado__Deployment__c/fields/copado__Build_Task__c.field-meta.xml
<CustomField>
    <fullName>copado__Build_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Task</label>
    <referenceTo>copado__Build_Task__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>