force-app/main/default/objects/copado__Deployment__c/fields/copado__Completed__c.field-meta.xml
<CustomField>
    <fullName>copado__Completed__c</fullName>
    <formula>IF(copado__Deployment_Jobs_Count__c&gt;0,
copado__Count_Completed__c /  copado__Deployment_Jobs_Count__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>