force-app/main/default/objects/copado__Deployment__c/fields/copado__Count_Completed__c.field-meta.xml
<CustomField>
    <fullName>copado__Count_Completed__c</fullName>
    <label># Completed</label>
    <summarizedField>copado__Step__c.copado__Count_Completed__c</summarizedField>
    <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>