force-app/main/default/objects/copado__Deployment__c/fields/copado__Deployment_Jobs_Count__c.field-meta.xml
<CustomField>
    <fullName>copado__Deployment_Jobs_Count__c</fullName>
    <label>Deployment Jobs Count</label>
    <summarizedField>copado__Step__c.copado__Org_Count__c</summarizedField>
    <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>