force-app/main/default/objects/copado__Deployment__c/fields/copado__Deployment_Last_Step__c.field-meta.xml
<CustomField>
    <fullName>copado__Deployment_Last_Step__c</fullName>
    <label>Deployment Last Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>