force-app/main/default/objects/copado__Deployment__c/fields/copado__Do_Not_Update_Promotion__c.field-meta.xml
<CustomField>
    <fullName>copado__Do_Not_Update_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Update Promotion</label>
    <type>Checkbox</type>
</CustomField>