force-app/main/default/objects/copado__Deployment__c/fields/copado__Flag_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Flag_Status__c</fullName>
    <formula>CASE( copado__Status__c, &quot;Completed Successfully&quot;, &quot;/resource/&quot; + IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-check.png&quot;,
&quot;In progress&quot;, &quot;/img/loading.gif&quot;,
&quot;Completed with Errors&quot;, &quot;/resource/&quot; + IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-cross.png&quot;,
&quot;/resource/&quot; + IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-paused.png&quot;)</formula>
    <label>Flag Status</label>
    <type>Text</type>
</CustomField>