force-app/main/default/objects/copado__Deployment__c/fields/copado__Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>copado__Git_Repository__c</fullName>
    <formula>IF(NOT(ISBLANK(copado__Promotion__r.copado__Project__c)), copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c,  copado__Promotion__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c )</formula>
    <label>Git Repository</label>
    <type>Text</type>
</CustomField>