force-app/main/default/objects/copado__Deployment__c/fields/copado__Last_Deployment_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Last_Deployment_Execution_Id__c</fullName>
    <label>Last Deployment Execution Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>