force-app/main/default/objects/copado__Deployment__c/fields/copado__Parent_Deployment__c.field-meta.xml
<CustomField>
    <fullName>copado__Parent_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Deployment</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipLabel>Deployments (Parent Deployment)</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>