force-app/main/default/objects/copado__Deployment__c/fields/copado__Platform__c.field-meta.xml
<CustomField>
    <fullName>copado__Platform__c</fullName>
    <formula>copado__Promotion__r.copado__Platform__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform</label>
    <type>Text</type>
</CustomField>