force-app/main/default/objects/copado__Deployment__c/fields/copado__Promotion__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>copado__Promotion__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>