force-app/main/default/objects/copado__Deployment__c/fields/copado__Schedule__c.field-meta.xml
<CustomField>
    <fullName>copado__Schedule__c</fullName>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deploy now</fullName>
            </value>
            <value>
                <fullName>Deploy later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>