force-app/main/default/objects/copado__Deployment__c/fields/copado__Server_URL__c.field-meta.xml
<CustomField>
    <fullName>copado__Server_URL__c</fullName>
    <formula>$Api.Partner_Server_URL_260</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Server_URL</label>
    <type>Text</type>
</CustomField>