force-app/main/default/objects/copado__Deployment__c/fields/copado__Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>copado__Source_Environment__c</fullName>
    <formula>copado__From_Org__r.copado__Environment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Environment</label>
    <type>Text</type>
</CustomField>