force-app/main/default/objects/copado__Deployment__c/recordTypes/copado__Advanced_multi_step.recordType-meta.xml
<RecordType>
    <fullName>copado__Advanced_multi_step</fullName>
    <active>true</active>
    <description>Create multiple types of deployment steps. (Technical knowledge needed)</description>
    <label>Advanced (multi-step)</label>
</RecordType>