force-app/main/default/objects/copado__Deployment__c/recordTypes/copado__Automation_Template.recordType-meta.xml
<RecordType>
    <fullName>copado__Automation_Template</fullName>
    <active>true</active>
    <description>Group of steps to be executed in the future.</description>
    <label>Automation Template</label>
</RecordType>