force-app/main/default/objects/copado__Deployment__c/recordTypes/copado__Data_Deployment.recordType-meta.xml
<RecordType>
    <fullName>copado__Data_Deployment</fullName>
    <active>true</active>
    <description>Select a Data Template to be deployed in a point and click process.</description>
    <label>Data Deployment</label>
</RecordType>