force-app/main/default/objects/copado__Deployment__c/recordTypes/copado__Metadata_Deployment.recordType-meta.xml
<RecordType>
    <fullName>copado__Metadata_Deployment</fullName>
    <active>true</active>
    <description>Select the metadata manually to be deployed in a point and click process.</description>
    <label>Metadata Deployment</label>
</RecordType>