force-app/main/default/objects/copado__Deployment__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__Date__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Deployed__c</columns>
    <columns>copado__Completed__c</columns>
    <columns>copado__From_Org__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>